noinst_LTLIBRARIES = libzephyr.la

AM_CFLAGS = -Ih -I$(top_srcdir)

DEFS = @DEFS@ -DSYSCONFDIR=\"${sysconfdir}\"

SUBDIRS = h
libzephyr_la_SOURCES = mit-copyright.h ZAsyncLocate.c ZCkAuth.c ZCkIfNot.c ZClosePort.c ZCmpUID.c ZCmpUIDP.c ZFlsLocs.c ZFlsSubs.c ZFmtAuth.c ZFmtList.c ZFmtNotice.c ZFmtRaw.c ZFmtRawLst.c ZFmtSmRLst.c ZFmtSmRaw.c ZFreeNot.c ZGetLocs.c ZGetSender.c ZGetSubs.c ZGetWGPort.c ZIfNotice.c ZInit.c ZLocations.c ZMakeAscii.c ZMkAuth.c ZNewLocU.c ZOpenPort.c ZParseNot.c ZPeekIfNot.c ZPeekNot.c ZPeekPkt.c ZPending.c ZReadAscii.c ZRecvNot.c ZRecvPkt.c ZRetSubs.c ZSendList.c ZSendNot.c ZSendPkt.c ZSendRLst.c ZSendRaw.c ZSetDest.c ZSetFD.c ZSetSrv.c ZSubs.c ZVariables.c ZWait4Not.c ZhmStat.c Zinternal.c zephyr_err.c


