
noinst_LTLIBRARIES = libfaim.la

libfaim_la_SOURCES =	admin.c		\
			adverts.c	\
			auth.c 		\
			bos.c		\
			buddylist.c	\
			chat.c		\
			chatnav.c	\
			conn.c		\
			ft.c		\
			im.c		\
			info.c		\
			login.c		\
			meta.c		\
			misc.c		\
			msgcookie.c	\
			rxhandlers.c	\
			rxqueue.c	\
			search.c	\
			snac.c		\
			stats.c		\
			tlv.c		\
			txqueue.c	\
			util.c		\
			md5.c

AM_CFLAGS = -I../include -DAIM_BUILDDATE=\"`date +%Y%m%d`\" -DAIM_BUILDTIME=\"`date +%H%M%S`\"

