
noinst_LTLIBRARIES = libfaim.la

libfaim_la_SOURCES = \
	admin.c        \
	adverts.c      \
	aim.h          \
	aim_cbtypes.h  \
	aim_internal.h \
	auth.c         \
	bart.c         \
	bos.c          \
	bstream.c      \
	buddylist.c    \
	chat.c         \
	chatnav.c      \
	conn.c         \
	email.c        \
	faimconfig.h   \
	ft.c           \
	icq.c          \
	im.c           \
	invite.c       \
	locate.c       \
	md5.h          \
	misc.c         \
	msgcookie.c    \
	odir.c         \
	popups.c       \
	rxhandlers.c   \
	rxqueue.c      \
	search.c       \
	service.c      \
	snac.c         \
	ssi.c          \
	stats.c        \
	tlv.c          \
	translate.c    \
	txqueue.c      \
	util.c

AM_CFLAGS = -I../include
