
noinst_LTLIBRARIES = libfaim.la

libfaim_la_SOURCES = \
	admin.c \
	adverts.c \
	auth.c \
	bart.c \
	bos.c \
	bstream.c \
	buddylist.c \
	chat.c \
	chatnav.c \
	conn.c \
	CVS \
	email.c \
	ft.c \
	icq.c \
	im.c \
	invite.c \
	locate.c \
	Makefile \
	Makefile.am \
	Makefile.in \
	md5.c \
	misc.c \
	msgcookie.c \
	odir.c \
	popups.c \
	rxhandlers.c \
	rxqueue.c \
	search.c \
	service.c \
	snac.c \
	ssi.c \
	stats.c \
	tlv.c \
	translate.c \
	txqueue.c \
	util.c

AM_CFLAGS = -I../include
